<?xml version="1.0"?>
<package>
  <name>steered_wheel_base_controller</name>
  <version>0.1.0</version>
  <description>
    steered_wheel_base_controller contains SteeredWheelBaseController, a base
    controller for mobile robots. The controller works with bases that have
    two or more independently-steerable driven wheels and zero or more
    omnidirectional passive wheels (e.g. swivel casters).
  </description>
  <!--
    Copyright (c) 2013 Wunderkammer Laboratory

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
  -->
  <maintainer email="jim.rothrock@wunderkammerlab.com">
    Jim Rothrock
  </maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/steered_wheel_base_controller</url>
  <url type="bugtracker">https://github.com/wunderkammer-laboratory/steered_wheel_base_controller/issues</url>
  <url type="repository">https://github.com/wunderkammer-laboratory/steered_wheel_base_controller.git</url>

  <author email="jim.rothrock@wunderkammerlab.com">Jim Rothrock</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>angles</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>

  <export>
    <controller_interface plugin="${prefix}/plugins/sw_base_controller_plugin.xml"/>
    <architecture_independent/>
  </export>
</package>
