<?xml version="1.0"?>
<package>
  <name>steered_wheel_base_controller</name>
  <version>0.1.0</version>
  <description>
    steered_wheel_base_controller is a base controller for mobile robots.
    It works with bases that have one or more independently-steerable driven
    wheels and zero or more omnidirectional passive wheels (e.g. swivel
    casters).
  </description>
  <!--
    Copyright (c) 2013 Wunderkammer Laboratory

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
  -->
  <maintainer email="jim.rothrock@wunderkammerlab.com">
    Jim Rothrock
  </maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/steered_wheel_base_controller</url>
  <url type="bugtracker">https://github.com/wunderkammer-laboratory/wl_ros_controllers/issues</url>
  <url type="repository">https://github.com/wunderkammer-laboratory/wl_ros_controllers.git</url>

  <author email="jim.rothrock@wunderkammerlab.com">Jim Rothrock</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_interface</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <controller_interface plugin="${prefix}/sw_base_controller_plugin.xml"/>
    <architecture_independent/>
  </export>
</package>
