<?xml version="1.0"?>
<package>
  <name>wl_ros_controllers</name>
  <version>0.1.0</version>
  <description>
    wl_ros_controllers is a group of packages that contain ROS controllers.

    Copyright (c) 2013 Wunderkammer Laboratory

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
  </description>
  <maintainer email="jim.rothrock@wunderkammerlab.com">
    Jim Rothrock
  </maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/wl_ros_controllers</url>
  <url type="bugtracker">https://github.com/wunderkammer-laboratory/wl_ros_controllers/issues</url>
  <url type="repository">https://github.com/wunderkammer-laboratory/wl_ros_controllers.git</url>
  <author email="jim.rothrock@wunderkammerlab.com">Jim Rothrock</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>steered_wheel_base_controller</run_depend>
  <run_depend>wheel_odometry_controller</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
